; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_gui_mac.c_gui_mch_set_sp_color.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_gui_mac.c_gui_mch_set_sp_color.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }

@specialColor = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gui_mch_set_sp_color(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @Red(i32 %3)
  %5 = mul nsw i32 %4, 257
  store i32 %5, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @specialColor, i32 0, i32 0), align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @Green(i32 %6)
  %8 = mul nsw i32 %7, 257
  store i32 %8, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @specialColor, i32 0, i32 1), align 4
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @Blue(i32 %9)
  %11 = mul nsw i32 %10, 257
  store i32 %11, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @specialColor, i32 0, i32 2), align 4
  ret void
}

declare dso_local i32 @Red(i32) #1

declare dso_local i32 @Green(i32) #1

declare dso_local i32 @Blue(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
